--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Index/ListGroup.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Index/ListGroup.cshtml
@@ -97,6 +97,6 @@
     </div>
 </div>
 @section Scripts{
-    @Scripts.Render("~/Scripts/myScript.js");
-    <script src="~/Scripts/MyScript/indexFunction.js"></script>
+    @Scripts.Render("~/Scripts/myScript.js");  <!-- this script for modal-->
+    <script src="~/Scripts/MyScript/indexFunction.js"></script> <!-- this script for scroll-top-button-->
 }
