--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Index/viewOtherDetails.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Index/viewOtherDetails.cshtml
@@ -19,7 +19,7 @@
         }
     }
 
-
+    @*This code is set info*@
     <div class="modal-header alert alert-info ">
         <button type="button" class="close" data-dismiss="modal" ariahidden="true">×</button>
     </div>
