--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Posts/_PartialEdit.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Posts/_PartialEdit.cshtml
@@ -2,7 +2,7 @@
 
 <link rel="stylesheet" type="text/css" href="~/Content/assets/TopicPost.css">
 <style>
-    .hide{
+    .hide {
         display: none
     }
 </style>
@@ -21,12 +21,15 @@
             <div class="form-group row ">
                 <div class="control-label col-md-12 TopicDelete-title">Topic Title</div>
                 <div class="col-md-12 Edit-post-temp">
-                    @Html.TextBoxFor(model => model.Topic_Tile, new {  htmlAttributes = new { @class = "form-control" } })
+                    @Html.TextBoxFor(model => model.Topic_Tile, new { htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
+            @{
+                int ID = Convert.ToInt32(Session["ID"]);
+            }
             <div class="form-group row hide">
                 <div class="col-sm-10">
-                    @Html.TextBoxFor(model => model.Acc_ID, new { @Value = 1, htmlAttributes = new { @class = "form-control" } })
+                    @Html.TextBoxFor(model => model.Acc_ID, new { @Value = ID, htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
             <div class="form-group row">
