--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Create.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Create.cshtml
@@ -15,7 +15,10 @@
         <a href="@Url.Action("Index", "Index")" class="btn btn-primary"><img src="~/Image/Logo_Icon/home-50.png" class="navbar-logo" alt="Site Logo" /></a>
         <a href="@Url.Action("Index", "Index")" class="btn btn-primary breadcrumb-link ">Home</a>
         @Html.ActionLink("UserName", "ListGroup", new { }, new { @class = "btn btn-primary breadcrumb-link" })
-        @Html.ActionLink("List Topic", "Index", "Topics", new { id = 4 }, new { @class = "btn btn-primary breadcrumb-link" })
+        @{
+        int ID = Convert.ToInt32(Session["ID"]);
+        }
+        @Html.ActionLink("List Topic", "Index", "Topics", new { id = ID }, new { @class = "btn btn-primary breadcrumb-link" })
         <div class="btn btn-info c-info breadcrumb-link"> Add Topic </div>
     </div>
 </div>
@@ -42,9 +45,6 @@
                 <div class="form-group hide">
                     @Html.LabelFor(model => model.Acc_ID, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @{ 
-                            var ID = Session["ID"].ToString();
-                        }
                         @Html.TextBoxFor(model => model.Acc_ID, new { @Value = ID, htmlAttributes = new { @class = "form-control" } })
                     </div>
                 </div>
