--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/Register.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/Register.cshtml
@@ -80,8 +80,6 @@
                             Female
                         </label>
                     </div>
-                    <div class="form-check">
-                    </div>
                 </div>
             </div>
 
@@ -118,6 +116,23 @@
                 </div>
             </div>
 
+            <div class="form-group">
+                <label class="control-label col-md-10">How would you like your profile?</label>
+                <div class="col-md-10">
+                    <div class="form-check">
+                        @Html.RadioButtonFor(m => m.Incognito, true, new { @id = "Incognito-private" })
+                        <label class="form-check-label" for="Incognito-private">
+                            Incognito
+                        </label>
+                        &nbsp;&nbsp;
+                        @Html.RadioButtonFor(m => m.Incognito, false, new { @id = "Incognito-public" })
+                        <label class="form-check-label" for="Incognito-public">
+                            Public
+                        </label>
+                    </div>
+                </div>
+            </div>
+            
             <div class="form-group">
                 <label class="control-label col-md-10">Are you an user or doctor?</label>
                 <div class="col-md-10">
