--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/AdminTopicManager/Index.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/AdminTopicManager/Index.cshtml
@@ -49,7 +49,13 @@
                             <td>@topic.date.ToString("dd/MM/yyyy")</td>
                             <td style="text-align: center;">@(topic.setV ? "Enable" : "Disable")</td>
                             <td>
-                                @Html.ActionLink("Edit", "Edit", new { title = topic.Topic_Title }, new { @class = "btn btn-success btn-control" })
+                                @{
+                                    int ID = Convert.ToInt32(Session["ID"]);
+                                }
+                                @if (topic.Acc_ID == ID)
+                                {
+                                    @Html.ActionLink("Edit", "Edit", new { title = topic.Topic_Title }, new { @class = "btn btn-success btn-control" })
+                                }
                                 @Html.ActionLink("Details", "Details", new { title = topic.Topic_Title }, new { @class = "btn btn-info btn-control" })
                                 <button type="button" class="btn btn-danger btn-control btnDelete" data-toggle="modal" data-target="#myModal">Delete</button>
                             </td>
@@ -65,7 +71,13 @@
                             <td>@topic.date.ToString("dd/MM/yyyy")</td>
                             <td style="text-align: center;">@(topic.setV ? "Enable" : "Disable")</td>
                             <td>
-                                @Html.ActionLink("Edit", "Edit", new { title = topic.Topic_Title }, new { @class = "btn btn-success btn-control" })
+                                @{
+                                    int ID = Convert.ToInt32(Session["ID"]);
+                                }
+                                @if (topic.Acc_ID == ID)
+                                {
+                                    @Html.ActionLink("Edit", "Edit", new { title = topic.Topic_Title }, new { @class = "btn btn-success btn-control" })
+                                }
                                 @Html.ActionLink("Details", "Details", new { title = topic.Topic_Title }, new { @class = "btn btn-info btn-control" })
                                 @Html.ActionLink("Recovery", "Recovery", new { title = topic.Topic_Title }, new { @class = "btn btn-warning btn-control" })
                             </td>
@@ -118,7 +130,7 @@
             let row = $(this).parents('tr');
             // Lay title cua cai topic trong cai row nay
             let title = $(row).find('.topic-title').text();
-            // Dua len modal 
+            // Dua len modal
             $('#myModal [name="title"]').val(title);
         });
 
