chagne some message

--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Create.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Create.cshtml
@@ -108,7 +108,7 @@
                             </div>
                             <!-- Modal body -->
                             <div class="modal-body">
-                                The title of topic is unique. After you posted, you will can not edit. Are you sure you want to post?
+                                The title of topic is unique. After you posted, you can not edit. Are you sure you want to post?
                             </div>
                             <!-- Modal footer -->
                             <div class="modal-footer">
