--- a/Project_III_Dr4rum/Project_III_Dr4rum/Views/Categories/Create.cshtml
+++ b/Project_III_Dr4rum/Project_III_Dr4rum/Views/Categories/Create.cshtml
@@ -7,7 +7,10 @@
 
 <h2>Create</h2>
 
-
+@if (null != ViewBag.err)
+{
+    <script>alert("@ViewBag.err")</script>
+}
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -43,7 +46,7 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
 
-                <button type="button" class="btn btn-primary" id = "btnmodal" data-toggle="modal" data-target="#exampleModal"> Create</button>
+                <button type="button" class="btn btn-primary" id="btnmodal" data-toggle="modal" data-target="#exampleModal"> Create</button>
             </div>
         </div>
 
