--- a/Project_III_Dr4rum/Project_III_Dr4rum/Views/Groups/Create.cshtml
+++ b/Project_III_Dr4rum/Project_III_Dr4rum/Views/Groups/Create.cshtml
@@ -7,7 +7,10 @@
 
 <h2>Create</h2>
 
-
+@if(null != ViewBag.err)
+{
+    <script>alert("@ViewBag.err")</script>
+}
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
