--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Accounts/Details.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Accounts/Details.cshtml
@@ -11,6 +11,8 @@
     <h4>Account</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>avatar</dt>
+        <dd><img src="~/Image/avt/@Model.Avatar" /></dd>
         <dt>
             User Name
         </dt>
