--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Accounts/Create.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Accounts/Create.cshtml
@@ -4,161 +4,184 @@
 {
     <script>alert("@ViewBag.err")</script>
 }
-@using (Html.BeginForm("Create", "Accounts", FormMethod.Post, new { enctype = "multipart/form-data" }))
-{
-    @Html.AntiForgeryToken()
+<!--scroll-top-Button-->
+<button onclick="topFunction()" id="scroll-top-Btn" title="Go to top">Top</button>
+<!-- Banner-->
+<img src="~/Image/Banner_Pic/User/index_banner.jpg" class="img-fluid" alt="Responsive image">
+<!-- breadcrumb-->
+<div class="breadcrumb-containt">
+    <div class="btn-group btn-breadcrumb breadcrumb-primary">
+        <a href="@Url.Action("Index", "AdminIndex")" class="btn btn-primary"><img src="~/Image/Logo_Icon/home-50.png" class="navbar-logo" alt="Site Logo" /></a>
+        @Html.ActionLink("Home", "Index", "AdminIndex", null, new { @class = "btn btn-primary breadcrumb-link" })
+        @Html.ActionLink("Accounts", "Index", "Accounts", null, new { @class = "btn btn-primary breadcrumb-link" })
+        <div class="btn btn-info c-info breadcrumb-link"> Create </div>
+    </div>
+</div>
+<!-- main info-->
+<div class="index-list-containt">
+    <div class="index-list">
+        @using (Html.BeginForm("Create", "Accounts", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        {
+            @Html.AntiForgeryToken()
+            <div class="form-horizontal">
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="row" style="padding: 10px; margin-bottom: 20px;">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                        <div class="form-group">
+                            <label class="control-label col-md-12">User Name</label>
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
 
-    <div class="form-horizontal">
-        <h4>Account</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            <label class="control-label col-md-12">Password</label>
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
 
-        <div class="form-group">
-            <label class="control-label col-md-2">User Name</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            <label class="control-label col-md-12">First Name</label>
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="control-label col-md-12">Last Name</label>
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="control-label col-md-12">Email</label>
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @type = "email", @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="control-label col-md-12">Address</label>
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="control-label col-md-12">Brithday</label>
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Birthday, new { htmlAttributes = new { @type = "date", @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Birthday, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="control-label col-md-12">Incognito</label>
+                            <div class="col-md-10">
+                                <div class="checkbox">
+                                    @Html.EditorFor(model => model.Incognito)
+                                    @Html.ValidationMessageFor(model => model.Incognito, "", new { @class = "text-danger" }) Want to hide information ?
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                        <div class="form-group">
+                            <label class="control-label col-md-12">Phone</label>
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            @Html.LabelFor(Model => Model.Gender, htmlAttributes: new { @class = "control-label col-md-12" })
+                            <div class="col-md-10">
+                                <div class="radio">
+                                    <label> @Html.RadioButtonFor(Model => Model.Gender, true, new { @checked = true, id = "male" }) Male</label>
+                                </div>
+                                <div class="radio">
+                                    <label> @Html.RadioButtonFor(Model => Model.Gender, false, new { id = "female" }) Female</label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="control-label col-md-12">Role</label>
+                            <div class="col-md-10">
+                                <select name="role" class="form-control" id="Role_Account">
+
+                                    <option value="A" Name="A">Admin</option>
+                                    <option value="U" Name="U">User</option>
+                                    <option value="D" Name="D">Doctor</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="control-label col-md-12">Avatar</label>
+                            <div class="col-md-10">
+
+                                <input type="file" name="postedFile" />
+
+                            </div>
+                        </div>
+
+                        <div class="form-group" id="hiddenInput">
+                            <label class="control-label col-md-12">Speciality</label>
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Speciality, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Speciality, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group" id="hiddenInput2">
+                            <label class="control-label col-md-12">Experience</label>
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Experience, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Experience, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group" id="hiddenInput3">
+                            <label class="control-label col-md-12">Achievement</label>
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Achievement, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Achievement, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="row" style="margin-left: 10px">
+                        <div class="col-lg-1 col-md-2 col-sm-3 col-4" >
+                            <input type="submit" value="Create" class="btn btn-success" />
+                        </div>
+                        <div class="col-lg-1 col-md-2 col-sm-3 col-3">
+                            @Html.ActionLink("Back ", "Index", null, new { @class = "btn btn-info" })
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2">Password</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        }
     </div>
-
-    <div class="form-group">
-        <label class="control-label col-md-2">First Name</label>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label class="control-label col-md-2">Last Name</label>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label class="control-label col-md-2">Email</label>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @type = "email", @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label class="control-label col-md-2">Address</label>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label class="control-label col-md-2">Brithday</label>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Birthday, new { htmlAttributes = new { @type = "date", @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Birthday, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label class="control-label col-md-2">Phone</label>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(Model => Model.Gender, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            <div class="radio">
-                <label>Male @Html.RadioButtonFor(Model => Model.Gender, true, new { @checked = true })</label>
-            </div>
-            <div class="radio">
-                <label>FeMale @Html.RadioButtonFor(Model => Model.Gender, false)</label>
-            </div>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label class="control-label col-md-2">Role</label>
-        <div class="col-md-10">
-            <select name="role" class="form-control" id="Role_Account">
-
-                <option value="A" Name="A">Admin</option>
-                <option value="U" Name="U">User</option>
-                <option value="D" Name="D">Doctor</option>
-            </select>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label class="control-label col-md-2">Avatar</label>
-        <div class="col-md-10">
-
-            <input type="file" name="postedFile" />
-
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label class="control-label col-md-2">Incognito(check,If you want to hide information)</label>
-        <div class="col-md-10">
-            <div class="checkbox">
-                @Html.EditorFor(model => model.Incognito)
-                @Html.ValidationMessageFor(model => model.Incognito, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>
-
-    <div class="form-group" id="hiddenInput">
-        <label class="control-label col-md-2">Speciality</label>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Speciality, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Speciality, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group" id="hiddenInput2">
-        <label class="control-label col-md-2">Experience</label>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Experience, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Experience, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group" id="hiddenInput3">
-        <label class="control-label col-md-2">Achievement</label>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Achievement, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Achievement, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
-        </div>
-    </div>
-
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Scripts/MyScript/indexFunction.js"></script>
     <script>
         $("#Role_Account").change(function () {
             var valueOption = $('#Role_Account').val();
