--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/AdminTopicManager/Index.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/AdminTopicManager/Index.cshtml
@@ -7,8 +7,8 @@
 <div class="Banner-containt">
     <img src="~/Image/Banner_Pic/Admin/adminIndex_banner.jpg" class="img-fluid" alt="Responsive image">
     <div class="Banner-title-containt">
-        <p class="Banner-title-info"> Admin Page</p>
-        <p class="Banner-title-info" id="Banner-child"> Welcome to Admin Page, Let's manager your Page !</p>
+        <p class="Banner-title-info"> Topic Page</p>
+        <p class="Banner-title-info" id="Banner-child"> Welcome to Topic Page, Let's manager your Page !</p>
     </div>
 </div>
 
